# rust-bootstrap-agent

./: .gitignore  Cargo.toml  DEVELOPMENT_LOG.md  INSTALL.md  README.md  STRATEGY_NOTES.md  manage.sh  yes  yes.pub
data/: dummy_logs.txt
plugins/: start_telegram.sh  telegram_bridge.py
src/: executor.rs  main.rs
storage/: system.md
tests/: test_evolution.py
