[package]
name = "rust-bootstrap-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"
crossterm = "0.27"
scopeguard = "1.2"
rustyline = "14.0"
